Fix contrast on date hover

--- a/src/scss/includes/_mixins.scss
+++ b/src/scss/includes/_mixins.scss
@@ -74,6 +74,7 @@
     &:focus,
     &:active {
         background-color: $color-link-hover;
+        color: $color-text;
         text-decoration: none;
     }
 
